# HappyKube

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  DOPPLER_SETUP.md  Dockerfile  FIXES_APPLIED.md  MIGRATION.md  MIGRATION_REMINDERS.ics  PRE_PUSH_CHECKLIST.md  README.md  RENDER_SECRETS.txt  SECURITY.md  SECURITY_SETUP.md  TODO_REFACTORING.md  alembic.ini  config.ini  fly.toml  pyproject.toml  render.yaml  requirements.txt  sonar-project.properties  test_connections.py  wsgi.py
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  deploy.yml
.sonarlint/: connectedMode.json
alembic/: env.py
alembic/versions/: 20260104_0036_7cb92b21caa4_add_performance_indexes.py  20260106_2213_6aeaf4a488e7_add_extra_data_column_to_emotions.py
deployment/api/: deployment.yaml  hpa.yaml  service.yaml
deployment/base/: kustomization.yaml
deployment/base/bot/: configmap.yaml
deployment/bot/: configmap.yaml  deployment.yaml  hpa.yaml  messages-configmap.yaml  secret.yaml
deployment/overlays/minikube/: env-patch.yaml  kustomization.yaml  secrets.yaml.example
docker/: .dockerignore  Dockerfile.api  Dockerfile.bot  entrypoint.sh  supervisord.conf
docs/: API_KEY_MANAGEMENT.md  AXIOM_SETUP.md  DEPLOY_NEONDB.md  FEATURES_V2.md  FLYIO_DEPLOYMENT.md  MIGRATION_SUMMARY.md  NEONDB_MIGRATION.md  PROGETTO.md  RENDER_MIGRATION_ARCHIVE.md  architettura.drawio  modifiche.md
happykube-v2/: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  QUICK_START.md  README.md  SUMMARY.md  alembic.ini  docker-compose.yml  pyproject.toml
happykube-v2/deployment/base/: namespace.yaml
happykube-v2/docker/: Dockerfile.api  Dockerfile.bot
happykube-v2/requirements/: base.txt
happykube-v2/scripts/: deploy_minikube.sh
happykube-v2/src/config/: __init__.py  logging.py
requirements/: dev.txt  test.txt
scripts/: deploy_minikube.sh  generate_encryption_key.py  migrate_old_data.py
src/: Dockerfile  __init__.py  app.py  comandi_handler.py  emotion_analyzer.py  emotion_api.py  emotion_api_client.py  emotion_db.py  event_logger.py  event_logs.py  requirements.txt  sentiment_analyzer.py  telegram_bot.py  wsgi.py
src/application/dto/: emotion_dto.py
src/application/interfaces/: emotion_repository.py  user_repository.py
src/application/services/: __init__.py  emotion_service.py
src/config/: __init__.py  axiom.py  logging.py  sentry.py  settings.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  emotion.py  user.py
src/domain/enums/: emotion_emojis.py  emotion_type.py  model_type.py  sentiment_type.py
src/domain/value_objects/: __init__.py  emotion_score.py  user_id.py
src/infrastructure/auth/: __init__.py  jwt_utils.py
src/infrastructure/cache/: __init__.py  redis_cache.py
src/infrastructure/database/: __init__.py  connection.py  encryption.py  models.py
src/infrastructure/ml/: __init__.py  api_analyzer.py  base_analyzer.py  claude_analyzer.py  english_emotion_analyzer.py  groq_analyzer.py  italian_emotion_analyzer.py  language_detector.py  model_factory.py  (+1 more)
src/migrations/: env.py
src/scripts/: manage_api_keys.py
tests/: conftest.py
tests/unit/: test_api_key_repository.py  test_emotion_service_monthly_stats.py  test_jwt_utils.py
(+53 files in other folders)
